# speech-buddy

./: .gitignore  README.md  main.py  pyproject.toml  speech_buddy.py
